infra/app/frontend.yaml
# frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dog-feeding-frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dog-feeding-frontend
  template:
    metadata:
      labels:
        app: dog-feeding-frontend
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dog-feeding-frontend
              topologyKey: kubernetes.io/hostname
      containers:
      - name: frontend
        image: mervynvg/bramble-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dog-feeding-frontend
  namespace: default
spec:
  selector:
    app: dog-feeding-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
