infra/app/ingress-app.yaml
# ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-app
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/api`)
    kind: Rule
    middlewares:
    - name: strip-api-prefix
    services:
    - name: dog-feeding-api
      port: 8000
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: dog-feeding-frontend
      port: 80
